--- a/front-main-app/package.json
+++ b/front-main-app/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.3.4",
     "echarts": "^3.8.5",
     "echarts-liquidfill": "^1.0",
+    "echarts-stat": "^1.2.0",
     "element-plus": "^2.2.32",
     "mitt": "^3.0.0",
     "moment": "^2.29.4",
