--- a/front-main-app/package.json
+++ b/front-main-app/package.json
@@ -21,7 +21,8 @@
     "nprogress": "^0.2.0",
     "pinia": "^2.0.32",
     "pinia-plugin-persistedstate": "^3.1.0",
-    "vue": "^3.2.47"
+    "vue": "^3.2.47",
+    "clipboard": "^2.0.11"
   },
   "devDependencies": {
     "@types/node": "^18.14.4",
